erDiagram
    USERS {
        bigint id PK
        string email
    }

    PRODUCTS {
        bigint id PK
        string name
        decimal sale_price
        int quantity
    }

    CART_ITEMS {
        bigint id PK
        bigint user_id FK
        bigint product_id FK
        int quantity
    }

    ORDERS {
        bigint id PK
        string code UK
        bigint user_id FK
        decimal total_price
        string status
        string payment_method
        string payment_status
        decimal shipping_fee
        decimal discount_amount
        string voucher_code
        string shipping_name
        string shipping_phone
        string shipping_address
        text cancel_reason
        string canceled_by
        boolean refund_required
    }

    ORDER_ITEMS {
        bigint id PK
        bigint order_id FK
        bigint product_id FK
        int quantity
        decimal unit_price
        decimal subtotal
    }

    PAYMENT_TRANSACTION_LOGS {
        bigint id PK
        bigint order_id FK
        string provider
        string status
        decimal amount
        string transaction_id
        string response_code
        text raw_payload
    }

    VOUCHERS {
        bigint id PK
        string code UK
        string type
        string scope
        decimal discount_value
        decimal max_discount_amount
        decimal min_order_value
        int usage_limit
        int used_count
        string status
    }

    USERS ||--o{ CART_ITEMS : "has"
    PRODUCTS ||--o{ CART_ITEMS : "in cart"

    USERS ||--o{ ORDERS : "places"
    ORDERS ||--o{ ORDER_ITEMS : "contains"
    PRODUCTS ||--o{ ORDER_ITEMS : "sold"

    ORDERS ||--o{ PAYMENT_TRANSACTION_LOGS : "payment logs"